# cppfcgi

./: .clang-format  .clang-tidy  .gitmodules  .travis.yml  CMakeLists.txt  README.rst  conanfile.py
include/: cppfcgi.hpp
include/cppfcgi/: dummy.hpp  error.hpp  record.hpp
src/: dummy.cpp  error.cpp  record.cpp
test/include/cppfcgi/: dummy_suite.hpp  error_suite.hpp  record_suite.hpp
test/lib/kawaii/include/kawaii/: kawaii.hpp
test/src/: driver.cpp  dummy_suite.cpp  error_suite.cpp  record_suite.cpp
